--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,14 @@
     <title>{{page.title}}</title>
     <link rel="stylesheet"
      href="{{ site.baseurl }}/assets/css/styles.css">
+
+     <!--JavaScript-->
+     <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
+
+     <!-- plugins -->
+      {% feed_meta %}
+      {% seo %}
+
 </head>
 <body>
     {% include navigation.html %}
