--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{page.title}}</title>
-    <link rel="stylesheet"
-     href="{{ site.baseurl }}/assets/css/styles.css">
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+      <meta charset="UTF-8"> 
+      <title>{{ page.title }}</title>
 
-     <!--JavaScript-->
-     <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
+      <!-- Stylesheet --> 
+      <link rel="stylesheet" href="{{site.baseurl }}/assets/css/styles.css"> 
 
-     <!-- plugins -->
-      {% feed_meta %}
-      {% seo %}
+      <!-- Favicon --> 
+      <link rel="icon" href="{{site.baseurl }}/assets/images/favicon.ico"> 
 
-</head>
-<body>
-    {% include navigation.html %}
-    {{ content }}
-</body>
+      <!-- JavaScript --> 
+      <script src="{{ site.baseurl }}/assets/js/scripts.js"></script> 
+
+      <!-- plugins --> 
+      {% feed_meta %} 
+      {% seo %} 
+</head> 
+<body> 
+    <div class="container"> 
+       <header> 
+           <img src="{{ site.baseurl}}/assets/images/ratii.jpg" alt="Profile Picture" 
+class="profile-picture"> 
+            <h1>{{ site.title }}</h1> 
+            <p>{{ site.description }}</p> 
+        </header> 
+
+        <nav> 
+            {% include navigation.html %} 
+        </nav> 
+
+        <main> 
+            {{ content }} 
+        </main> 
+
+        <footer> 
+            <p>&copy; {{ site.time | date: '%Y' }} {{ site.title}}. All rights reserved.</p> 
+        </footer> 
+    </div> 
+</body> 
 </html>
