--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,67 @@
-.current {
-    color : green;
+$primary-color: #3b7b3a; 
+$secondary-color: #fbbc05; 
+$font-stack: Helvetica, sans-serif; 
+
+body, 
+h1, 
+h2,
+ p {
+
+      margin: 0; padding: 0; box-sizing: border-box; 
+}
+
+body { 
+    font-family: $font-stack; line-height: 1.6; 
+    background-color: #f4f6f4; 
+} 
+
+header {
+    text-align: center; padding: 24px; color: #fff;
+    background-color: $primary-color; 
+} 
+
+main {
+    padding: 24px; margin-top: 24px;
+    box-shadow: 8px rgha(0, 8, 8, 8.1);
+    background-color: #fff; 
+}
+
+footer { 
+    text-align: center; padding: 8px; margin-top: 24px; color: #fff;
+    background-color: $primary-color; 
+} 
+
+h2 { 
+    color: #333; margin-bottom: 8px; 
+} 
+
+nav {
+     margin: 24px 8; 
+     ul { 
+         list-style-type: none; margin: 0; padding: 8; overflow: hidden;
+         background-color: Sprimary-color 
+    }
+    li {
+        float: left; 
+        a {
+              display: block; color: black; text-align: center; padding: 8px 16px; 
+              text-decoration: none; 
+              &:hover:not(.active) { 
+                  background-color: $secondary-color;
+               }
+        }
+    }   
+} 
+
+.container { 
+    width: 80%; margin: auto; overflow: hidden; 
+} 
+
+ .profile-picture { 
+     width: 150px; height: 150px; border-radius: 50%; margin: 24px auto; 
+     background-color: $secondary-color; 
+} 
+
+.active { 
+    background-color: $secondary-color;
 }
